--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset = "utf-8">
         <title> Title for the Website!  </title>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
     </head>
 
