--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             </div>
         </section>
 
+        <h3> A Header with a Border! </h3>
+
         <h2> Another Section </h2>
         <img src="pic.jpg" style="width:auto; height:325px"> 
 
