--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         </section>
 
         <h3> A Header with a Border! </h3>
+            <p> Try hovering over the element below! </p>
+            <div class="animation"></div>
+            <p> Isn't this cool?</p>
 
         <h2> Another Section </h2>
         <img src="pic.jpg" style="width:auto; height:325px"> 
